# game-3d-toolkit

./: .flake8  .pre-commit-config.yaml  README.md  action.yml  pyproject.toml
.github/actions/optimize-models/: action.yml
.github/workflows/: optimize-models.yml  pre-commit.yml  test.yml
demo/: pirate.glb
game_3d_toolkit/: __init__.py  fix_model.py  optimize_models.py  silence.py
