[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "game_3d_toolkit"
version = "0.1.0"
description = "A package that contains a variety of tools for working with 3D models in the context of game development."
license = "MIT"
authors = ["Florian Vazelle <florian.vazelle@vivaldi.net>"]
readme = "README.md"
repository = "https://github.com/florianvazelle/3d-toolkit"

[tool.poetry.scripts]
optimize-models = "game_3d_toolkit.optimize_models:cli"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
tqdm = "^4.64.1"
bpy = "^3.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build .tox .git __pycache__"

# Extra options:
addopts = [
  "--strict-markers",
]
