[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "game_3d_toolkit"
version = "0.1.0"
description = "A package that contains a variety of tools for working with 3D models in the context of game development."
license = "MIT"
authors = ["Florian Vazelle <florian.vazelle@vivaldi.net>"]
readme = "README.md"
repository = "https://github.com/florianvazelle/game-3d-toolkit"

[tool.poetry.scripts]
optimize-models = "game_3d_toolkit.optimize_models:cli"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
tqdm = "^4.64.1"
bpy = "^3.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
flake8 = "^5.0.4"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
